[gd_scene load_steps=9 format=3 uid="uid://dg62xstasief2"]

[ext_resource type="Script" path="res://src/intro/Intro.gd" id="1_fjypy"]
[ext_resource type="Texture2D" uid="uid://coprf8u4ls431" path="res://gfx/intro/intro1.png" id="2_s7ecw"]
[ext_resource type="Texture2D" uid="uid://sxbu80po2eip" path="res://gfx/intro/intro2.png" id="3_i5r21"]
[ext_resource type="Texture2D" uid="uid://coosufqsxrdw4" path="res://gfx/intro/intro3.png" id="4_f1k51"]
[ext_resource type="Texture2D" uid="uid://dcn2n0tggmald" path="res://gfx/intro/intro4.png" id="5_4t6v4"]
[ext_resource type="Texture2D" uid="uid://8l8g1xulgvrd" path="res://gfx/intro/intro5.png" id="6_3r415"]
[ext_resource type="Texture2D" uid="uid://byvius102eeqk" path="res://gfx/intro/intro6.png" id="7_8gdok"]
[ext_resource type="AudioStream" uid="uid://3a67sl38v6w6" path="res://music/intro.ogg" id="8_ntqr6"]

[node name="Intro" type="Node2D"]
script = ExtResource("1_fjypy")

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Intro1" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_s7ecw")

[node name="Intro2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_i5r21")

[node name="Intro3" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_f1k51")

[node name="Intro4" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_4t6v4")

[node name="Intro5" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_3r415")

[node name="Intro6" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_8gdok")

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ntqr6")
volume_db = -5.0
autoplay = true
